NUMP/static/css/style.css
body {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    background-color: #f2f2f2; /* Light gray background */
}

/* Header styling */
header {
    background-color: #1E3A8A; /* Deep blue */
    color: white;
    align-items: center;
    justify-content: space-between;
    padding: 10px 20px;
    height: fit-content;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
}
/* Logo styling */
.logo {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #1E3A8A;
    border-radius: 8px;
    padding: 10px;
}

.logo img {
    height: 75px;
    margin-right: 10px;
}

.title{
    font-size: 1.5em;
    font-weight: bold;
    color: #FFD700; /* Yellow for NU */
    font-family: "Georgia", serif; /* Fancy font for 'Marketplace' */ 
}
header h1 {
    font-size: 1.5em;
    font-weight: bold;
    color: #FFD700; /* Yellow for NU */
    font-family: "Georgia", serif; /* Fancy font for 'Marketplace' */
}

/* Navigation links */
header nav{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

header nav .nav-bar{
    display: flex;  
    align-items: center;
}

nav .links{
    background-color: #1E3A8A; /* Deep blue */
    color: white;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px 20px;
    height: 70px;
    gap: 20px;
    }

header nav a {
    color: white;
    text-decoration: none;
    font-size: 1em;
    font-weight: bold;
}

header nav a:hover {
    text-decoration: underline;
}

div[name="border"]{
    border: 1.3px solid #bfbebe;
    border-radius: 8px;
    padding: 8px;
    background-color: rgb(255, 252, 252);
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
}

.user{
    display: flex; 
    align-items: center;
    gap: 5px;
    font-size: 10px;
}

.user img{
    height: 30px;
    border: 1px black;
    border-radius: 50%;
}

/* Main content area */
main {
    margin: 20px auto;
    background-color: white;
    position: relative;
    width: 90%;
    height: calc(100vh - 90px); /* Remaining height after header */
    border-radius: 10px;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
    overflow-y: scroll;
    padding: 20px;
}

.container{
    margin: 10px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 15px; /* Space between divs */
    justify-content: flex-start;
    padding: 30px;
}

.container div{
    width: 300px;
    height: 500px;
}
.container a{
    text-decoration: none;
}

.item-product-display{
    width: 100%;
}

.container div .image-container{
    width: 100%;
    height: 200px; /* Fixed height for uniform size */
    display: flex;
    text-align: center;
    align-items: center;
    overflow: hidden; /* Ensures the image doesn't overflow */
    border-radius: 4px;
}

.image{
    width: 100%;
    height: 100%;
    object-fit: contain; /* Ensures consistent image scaling */
    display: block
}
.product-description-text{
    height: 50px;
    width: 270px;
    overflow: hidden;
    /* white-space: nowrap; */
    text-overflow: ellipsis;
}

.new-product-display{
    display: flex;
    align-items: center;
    justify-content: center;
}

.new-product-display h1{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 4rem;
}

.info-container{
    font-family: Helvetica, sans-serif;
}
.info-container-form{
    font-family: Helvetica, sans-serif;
    display: flex;
    flex-flow: column;
}

.info-container-form section{
    margin: 30px;
    display: flex;
    position: relative;
    justify-content: center;
    gap: 15px;
    overflow: auto;
}

.info-container section{
    margin: 30px;
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
    gap: 15px;
    overflow: auto;
}

.image-container-form{
    display: flex;
    align-items: center;
}

.image-container-info{
    display: flex;
    align-items: center;
    width: fit-content;
}

.image-container-info img{
    border-radius: 10px;
    object-fit: contain;
    min-width: 400px;
    max-width: 650px;
    max-height: 650px;
    align-self: center;
}

.image-container-form img{
    border-radius: 10px;
    max-height: 500px;
    max-width: 500px;
    align-self: center;
}

.info{
    overflow-x: scroll;
    width: 80%;
}

.product-name{
    font-size: 2rem;
    font-family: Georgia, 'Times New Roman', Times, serif;
    margin-top: 10px;
    margin-bottom: 10px;
}

.price-stocks{
    font-size: 1em;
    display:flex;
    justify-content: space-between;  
    margin-right: 200px;  
}

.button-container{
    display: flex;
    justify-content: space-between;
    margin-inline: 100px;
    margin-block: 50px; 
}

.signout-container{
    display: flex;
    float: right;
}

.submit-button{
    background-color: #192f89; /* Dark blue background */
    color: #ffd700; /* Yellow text */
    font-size: 16px;
    font-weight: bold;
    border: none;
    border-radius: 8px; /* Rounded corners */
    padding: 10px 20px;
    cursor: pointer;
    text-align: center;
    display: inline-block;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Slight shadow */
    transition: transform 0.2s, box-shadow 0.2s;
}

.submit-button:hover{
    transform: scale(1.05); /* Slightly larger on hover */
    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.4); /* Deeper shadow */
}

.submit-button:active{
    transform: scale(0.95); 
}
    
.hidden-form {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 1000;
    justify-content: center;
    align-items: center;
    overflow: auto;
}

.form-content {
    background-color: rgb(219, 218, 218);
    padding: 20px;
    border-radius: 10px;
    width: 1200px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    justify-content: center;
    overflow: auto;
}

.close {
    float: right;
    font-size: 1.5em;
    cursor: pointer;
    margin-top: -10px;
    margin-right: -10px;
}

 .auth{
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    max-width: 100%;    /* Prevent horizontal overflow */
    max-height: 100%;   /* Prevent vertical overflow */
    box-sizing: border-box; /* Include padding and border in size calculation */
    overflow: auto;
    transform: translate(-50%, -50%);
    justify-self: center;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    width: fit-content;
    height: fit-content;

}

.login{
    background: rgb(241, 240, 240);
    padding: 20px;
    width: 350px;
}

.register{
    background-color: rgb(241, 240, 240);
    padding: 20px;
    width: 400px;
}

.form-container{
    margin: 0px;
    justify-content: center;
}

.form-with-validation{
    width: 100%;
    height: 85%;
}

.input-container{
    margin-top: 5px;
    margin-bottom: 10px;
    width: 100%;
    height: 50px;
    display: flex;
    border: 1px solid #3f3f3f;
    align-items: center;
    border-radius: 8px;
    padding: 8px;
    background-color: white;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
}

.input-container input{
    border: none;
    width: 100%;
    
}


.input-container input:focus{
    outline: none;
}

.input-container img{
    width: 20px;
    height: 20px;
    margin-right: 10px;
}

.textarea-container textarea{
    margin-top: 5px;
    width: 100%;
    height: 200px;
    display: flex;
    border: 1px solid #3f3f3f;
    align-items: center;
    border-radius: 8px;
    padding: 8px;
    background-color: white;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
    margin-bottom: 15px;
}

.numeric-input-container{
    display: flex;
    justify-content: space-around;
}

.numeric-input-container input{
    border: 1px solid #3f3f3f;
    border-radius: 8px;
    padding: 8px;
    background-color: white;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
    margin-bottom: 15px;
}


.submit-form{
    width: 80%;
    height: 40px;
    display: flex;
    border: 1px solid #3f3f3f;
    justify-self: center;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    border-radius: 8px;
    background-color: #192f89; /* Dark blue background */
    color: #ffd700; /* Yellow text */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
    padding: 10px;
    transition: transform 0.2s, box-shadow 0.2s;
    padding: 0%;
}


.submit-form button{
    background-color: #192f89; /* Dark blue background */
    color: #ffd700; /* Yellow text */
    border: none;
    font-size: 16px;
    font-weight: bold;
    width: 100%;
    height: 100%;
    cursor: pointer;
}

.submit-form:hover{
    transform: scale(1.05); /* Slightly larger on hover */
    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.4); /* Deeper shadow */
}

.submit-form:active{
    transform: scale(0.95);  
}

.product-form{
    background-color: rgb(219, 218, 218);
    display:flex;
    padding: 20px;
    width: 1100px;
    gap: 15px;
    font-family: Arial, Helvetica, sans-serif;
}

.upload-preview-image{
    min-height: 450px;
    height:fit-content;
    overflow: hidden;
    display: grid;
    border: 1px solid #3f3f3f;
    border-radius: 8px;
    padding: 12px;
    background-color: rgb(255, 252, 252);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
    width:300px;
    margin-bottom: 15px;
    position:relative;
    min-width: max-content;
}


.upload-preview-image .image-input{
    display: inline-block;
    height: fit-content;
    width:290px;
}

.upload-preview-image ._image{
    display: flex;
    justify-content: center;
    height: fit-content;
    align-items: center;
    width:320px;
}

.text-input-container{
    display: grid;
    margin-left: 20px;
    width: 100%;
}


.order-container{
    display: flex;
    flex-wrap: wrap;
    row-gap: 10px;
    justify-content: center;
}

.order-container .indie-order-containers{
    display: flex;
    width: 80%;
    height: 250px;
    align-items: center;
}

.order-image-container{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 40%;
    height: 100%;
    object-fit: scale-down;
    min-height: fit-content;
}

.order-image-container img{
    width: max-content;
    max-height: 200px;
}

.order-info-container{
    width: 60%;
}

